[gd_scene load_steps=4 format=3 uid="uid://cd3f50eloxr7h"]

[ext_resource type="Script" path="res://addons/cogito/InventoryPD/UiScenes/CogitoQuickslotContainer.gd" id="1_txypm"]
[ext_resource type="PackedScene" uid="uid://btf6bmlgtfk1b" path="res://addons/cogito/Components/DynamicInputIcon.tscn" id="2_e7trw"]
[ext_resource type="Texture2D" uid="uid://bsf2bc116o1oi" path="res://addons/cogito/Assets/Graphics/ItemIcons/CogitoKey.png" id="2_hcgid"]

[node name="CogitoQuickslotContainer" type="PanelContainer"]
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_txypm")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_hcgid")
expand_mode = 3

[node name="LabelStackAmount" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "15"

[node name="MarginContainerInputIcon" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 10

[node name="DynamicInputIcon" parent="MarginContainerInputIcon" instance=ExtResource("2_e7trw")]
position = Vector2(0, 0)
scale = Vector2(0.5, 0.5)
action_name = "quickslot_1"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
